# src/TiledArray/Makefile

library_includedir = $(includedir)/TiledArray
library_include_HEADERS = annotated_tensor.h \
                          array.h \
                          binary_tensor.h \
                          bitset.h \
                          blocked_pmap.h \
                          contraction_tensor_impl.h \
                          contraction_tensor.h \
                          coordinates.h \
                          cyclic_pmap.h \
                          dense_storage.h \
                          distributed_storage.h \
                          error.h \
                          expressions.h \
                          functional.h \
                          indexed_iterator.h \
                          lazy_sync.h \
                          madness.h \
                          math.h \
                          permutation.h \
                          pmap.h \
                          range_iterator.h \
                          range.h \
                          reduce_task.h \
                          summa.h \
                          tensor_expression.h \
                          tensor_impl.h \
                          tensor.h \
                          tensor_reduce.h \
                          tiled_range.h \
                          tiled_range1.h \
                          transform_iterator.h \
                          type_traits.h \
                          unary_tensor.h \
                          variable_list.h \
                          vspgemm.h \
                          config.h