#
# This file is a part of TiledArray.
# Copyright (C) 2013  Virginia Tech
#
#  This program is free software: you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation, either version 3 of the License, or
#   (at your option) any later version.
#
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with this program.  If not, see <http://www.gnu.org/licenses/>.
#

# src/TiledArray/Makefile

library_includedir = $(includedir)/TiledArray
library_include_HEADERS = annotated_tensor.h \
                          array.h \
                          binary_tensor.h \
                          bitset.h \
                          blocked_pmap.h \
                          contraction_tensor_impl.h \
                          contraction_tensor.h \
                          coordinates.h \
                          cyclic_pmap.h \
                          dense_storage.h \
                          distributed_storage.h \
                          error.h \
                          expressions.h \
                          functional.h \
                          indexed_iterator.h \
                          lazy_sync.h \
                          madness.h \
                          math.h \
                          permutation.h \
                          pmap.h \
                          range_iterator.h \
                          range.h \
                          reduce_task.h \
                          replicated_pmap.h \
                          summa.h \
                          tensor_expression.h \
                          tensor_impl.h \
                          tensor.h \
                          tensor_reduce.h \
                          tiled_range.h \
                          tiled_range1.h \
                          transform_iterator.h \
                          type_traits.h \
                          unary_tensor.h \
                          variable_list.h \
                          vspgemm.h \
                          config.h