#
#  This file is a part of TiledArray.
#  Copyright (C) 2013  Virginia Tech
#
#  This program is free software: you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation, either version 3 of the License, or
#  (at your option) any later version.
#
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with this program.  If not, see <http://www.gnu.org/licenses/>.
#

# src/TiledArray/Makefile

include $(top_srcdir)/MakeGlobal.am

SUBDIRS = math pmap tile_op dist_eval expressions algebra
library_includedir = $(includedir)/TiledArray
library_include_HEADERS = annotated_tensor.h \
                          array.h \
                          binary_tensor.h \
                          bitset.h \
                          contraction_tensor_impl.h \
                          contraction_tensor.h \
                          coordinates.h \
                          counter_probe.h \
                          dense_storage.h \
                          distributed_storage.h \
                          eigen.h \
                          error.h \
                          expressions.h \
                          indexed_iterator.h \
                          lazy_sync.h \
                          madness.h \
                          permutation.h \
                          range_iterator.h \
                          range.h \
                          reduce_task.h \
                          replicator.h \
                          shape.h \
                          size_array.h \
                          spsumma.h \
                          summa.h \
                          tensor_expression.h \
                          tensor_impl.h \
                          tensor.h \
                          tensor_reduce.h \
                          tiled_range.h \
                          tiled_range1.h \
                          transform_iterator.h \
                          type_traits.h \
                          unary_tensor.h \
                          vspgemm.h \
                          config.h