#
#  This file is a part of TiledArray.
#  Copyright (C) 2013  Virginia Tech
#
#  This program is free software: you can redistribute it and/or modify
#  it under the terms of the GNU General Public License as published by
#  the Free Software Foundation, either version 3 of the License, or
#  (at your option) any later version.
#
#  This program is distributed in the hope that it will be useful,
#  but WITHOUT ANY WARRANTY; without even the implied warranty of
#  MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
#  GNU General Public License for more details.
#
#  You should have received a copy of the GNU General Public License
#  along with this program.  If not, see <http://www.gnu.org/licenses/>.
#

# src/TiledArray/expressions/Makefile

library_includedir = $(includedir)/TiledArray/expressions
library_include_HEADERS = base.h \
                          binary_base.h \
                          operator.h \
                          scal_binary_base.h \
                          scal_tsr_add.h \
                          scal_tsr_cont.h \
                          scal_tsr_conv.h \
                          scal_tsr_mult.h \
                          scal_tsr_neg.h \
                          scal_tsr_subt.h \
                          scal_tsr.h \
                          tsr_add.h \
                          tsr_base.h \
                          tsr_cont.h \
                          tsr_conv.h \
                          tsr_mult.h \
                          tsr_neg.h \
                          tsr_subt.h \
                          tsr.h \
                          type_traits.h \
                          unary_base.h \
                          variable_list.h